--- a/templates/index.html
+++ b/templates/index.html
@@ -245,6 +245,8 @@
     <title>Composr</title>
     <link rel="stylesheet" href="/static/css/styles.css">
     <link rel="stylesheet" href="/static/css/editor.css">
+    <link rel="stylesheet" href="/static/css/updates.css">
+    
     
     
     
@@ -402,6 +404,8 @@
             <div class="action-buttons">
                 <button id="toggle-view" class="btn btn-icon" onclick="toggleView()" title="Toggle View">⋮⋮</button>
                 <button id="refresh-btn" class="btn btn-primary">Refresh</button>
+                <button id="container-updates-settings" class="btn btn-secondary" onclick="showContainerUpdateSettings()" title="Container Update Settings">⚙️</button>
+    
             </div>
         </div>
         <!-- Batch Actions -->
@@ -815,6 +819,7 @@
     <script src="/static/js/table-view.js"></script>
     <script src="/static/js/remote.js"></script>
     <script src="/static/js/backup.js"></script>
+    <script src="/static/js/container-updates.js"></script>
     
 </body>
 </html>
